<resources>
    <string name="app_name">GPA Roxbrr Calculator</string>

    <string name="labelDirection">Enter your letter grades below\nto determine your GPA </string>

    <string name="grade1">Grade 1:</string>
    <string name="grade2">Grade 2:</string>
    <string name="grade3">Grade 3:</string>
    <string name="grade4">Grade 4:</string>
    <string name="grade5">Grade 5:</string>

    <string name="credits">Credits:</string>

    <string name="calculate">Compute GPA</string>

    <string name="yourGPA">GPA: </string>

    <string name="clearForm">Clear</string>

    <string name="gradeHint">Enter Grade</string>

    <string name="creditHint">Credits</string>

</resources>
